--- a/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
+++ b/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
@@ -315,10 +315,10 @@ For the prediction of interest,
 if(!file.exists("../data/hamby224_lime.rds")) {
   
   # Specify the options to use with lime 
-  hamby224_lime_cases <- data.frame(bin_continuous = c(rep(TRUE, 18), rep(FALSE, 2)),
-                                    quantile_bins = c(rep(TRUE, 9), rep(FALSE, 9), rep(NA, 2)),
-                                    nbins = c(rep(2:10, 2), rep(NA, 2)),
-                                    use_density = c(rep(NA, 18), TRUE, FALSE)) %>%
+  hamby224_lime_cases <- data.frame(bin_continuous = rep(TRUE, 18),
+                                    quantile_bins = c(rep(TRUE, 9), rep(FALSE, 9)),
+                                    nbins = rep(2:10, 2),
+                                    use_density = rep(NA, 18)) %>%
   mutate(case = 1:length(nbins)) %>%
   select(case, bin_continuous, nbins, quantile_bins, use_density)
   
@@ -461,49 +461,105 @@ if(!file.exists("../data/hamby224_lime_comparisons.rds")) {
 ```
 
 ```{r}
-hamby224_lime_comparisons %>%
+hamby224_lime_mse <- hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore)) %>%
   group_by(bin_continuous, quantile_bins, nbins, use_density, set) %>%
   summarise(mse = (sum(diff)^2) / length(diff)) %>%
   arrange(set)
 ```
 
 ```{r}
+hamby224_lime_mse %>%
+  group_by(set) %>%
+  arrange(mse) %>%
+  slice(1:2)
+```
+
+```{r}
+hamby224_lime_mse %>%
+  ggplot(aes(x = nbins, y = mse, color = quantile_bins, group = quantile_bins)) +
+  geom_point() + 
+  geom_line() + 
+  facet_grid( ~ set) + 
+  theme_bw()
+```
+
+```{r}
 hamby224_lime_comparisons %>%
-  filter(nbins == "2", set == "Set 1") %>%
+  filter(quantile_bins == TRUE, nbins == "8", set == "Set 1") %>%
   select(rf_features, diff, -case) %>%
   gather(key = feature, value = feature_value, rf_features) %>%
   select(feature, feature_value, diff) %>%
   ggplot(aes(x = feature_value, y = diff)) + 
   geom_point() + 
-  facet_wrap( ~ feature, scales = "free") + 
+  facet_wrap(~ feature, scales = "free") + 
   geom_hline(yintercept = 0, color = "blue")
 ```
 
-Below is are plots of the probability of a match computed from the "simple" (ridge regression) model in `lime` versus the probability of a match computed from the `rtrees` random forest model for both the Hamby224 Set 1 and Set 11 test cases. Linear regression lines have been fit through the points. Both plots show that there is a weak negative linear relationship between the two variables. This suggests that as the probability of a match increases in the random forest, the simple model is doing a worse job of computing a probability that agrees with the random forest model. However, the Hamby 224 test sets 1 and 11 do not have many observations with high random forest scores. Each test set should only have 18 matches. The trend may be different if there was more cases with high random forest scores. However, it appears that the cases that are a match have some of the lowest model_prediction scores overall.
-
-The points are also colored by the $R^2$ value from the simple model. This plot suggests that the simple models with a prediction close to 0.5 have a better fit, but the $R^2$ values are still low. I am not sure what to make of this. However, it does not appear that the $R^2$ is related to the probability from the random forest.
+```{r}
+hamby224_lime_comparisons %>%
+  filter(quantile_bins == TRUE, nbins == "3", set == "Set 11") %>%
+  select(rf_features, diff, -case) %>%
+  gather(key = feature, value = feature_value, rf_features) %>%
+  select(feature, feature_value, diff) %>%
+  ggplot(aes(x = feature_value, y = diff)) + 
+  geom_point() + 
+  facet_wrap(~ feature, scales = "free") + 
+  geom_hline(yintercept = 0, color = "blue")
+```
 
 ```{r fig.width = 8, fig.height = 4}
-ggplot(hamby224_lime_comparisons, aes(x = rfscore, y = model_prediction)) + 
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 1") %>%
+  ggplot(aes(x = rfscore, y = model_prediction)) + 
   geom_point(aes(color = model_r2)) + 
-  facet_grid(nbins ~ set) + 
+  facet_wrap( ~ nbins) + 
   theme_bw() + 
   stat_smooth(method = "lm")
 ```
 
-The plots below show the absolute value of the difference between the random forest probability and the simple model probability versus the random forest probability. These plots show a clear v-shaped trend that suggests that the simple model is doing the best job of replicating the random forest probability around the random forest probability of 0.5. That is, the simple model seems to be doing a worse job of computing accurate predictions in the extremes of the random forest scores.
+```{r fig.width = 8, fig.height = 4}
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 11") %>%
+  ggplot(aes(x = rfscore, y = model_prediction)) + 
+  geom_point(aes(color = model_r2)) + 
+  facet_wrap( ~ nbins) + 
+  theme_bw() + 
+  stat_smooth(method = "lm")
+```
 
 ```{r fig.width = 8, fig.height = 4}
-ggplot(hamby224_lime_comparisons, aes(x = rfscore, y = abs(diff))) + 
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 1") %>%
+  ggplot(aes(x = rfscore, y = abs(diff))) + 
   geom_point(aes(color = model_r2)) + 
   facet_grid(nbins ~ set) +
   theme_bw()
 ```
 
-The plot below shows the difference of the two model probabilities versus the random forest score. This shows that when the random forest score is low, the simple model is over estimating the probability, and when the random forest score is high, the simple model is underestimating the probability.
+```{r fig.width = 8, fig.height = 4}
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 11") %>%
+  ggplot(aes(x = rfscore, y = abs(diff))) + 
+  geom_point(aes(color = model_r2)) + 
+  facet_grid(nbins ~ set) +
+  theme_bw()
+```
 
 ```{r fig.width = 8, fig.height = 4}
-ggplot(hamby224_lime_comparisons, aes(x = rfscore, y = diff)) + 
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 1") %>%
+  ggplot(aes(x = rfscore, y = diff)) + 
+  geom_point(aes(color = model_r2)) + 
+  facet_grid(nbins ~ set) +
+  geom_hline(yintercept = 0, color = "blue") +
+  theme_bw()
+```
+
+```{r fig.width = 8, fig.height = 4}
+hamby224_lime_comparisons %>%
+  filter(!is.na(rfscore), set == "Set 11") %>%
+  ggplot(aes(x = rfscore, y = diff)) + 
   geom_point(aes(color = model_r2)) + 
   facet_grid(nbins ~ set) +
   geom_hline(yintercept = 0, color = "blue") +
@@ -522,7 +578,7 @@ hamby224_test_explain %>%
 
 ```{r}
 hamby224_test_explain %>%
-  filter(set == "Set 1", nbins == "2") %>%
+  filter(set == "Set 1", nbins == "8") %>%
   mutate(rfscore = round(rfscore, 3)) %>%
   select(case, bullet1, bullet2, land1, land2, rfscore) %>%
   distinct() %>%
